--- a/packages/website/src/pages/api/core/core.njk
+++ b/packages/website/src/pages/api/core/core.njk
@@ -14,6 +14,6 @@ renderData:
 
   <p>The core of uiloos consists of pure JavaScript classes and functions.</p>
   
-  {{ displayApiGroup(api.core.children, 'core', ['ActiveList', 'ViewChannel', 'License', 'Generic']) }}
+  {{ displayApiGroup(api.core.children, 'core', ['ActiveList', 'ViewChannel', 'Typewriter', 'License', 'Generic']) }}
 
 </article>
