--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -11,10 +11,14 @@ renderData:
 <section class="relative">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 pt-32 mb-8 text-center">  
     <h1 class="text-5xl md:text-6xl font-extrabold leading-tighter tracking-tighter mb-4">uiloos makes creating component libraries <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-orange-600">easier and faster</span></h1>
+
     <div class="max-w-3xl mx-auto">
       <p class="text-2xl text-gray-800 dark:text-white mb-8">
         uiloos is a headless UI library which provides common components without any styling. You create the design and "uiloos" provides the behavior.
       </p>
+
+      <p id="home-typewriter" class="text-xl font-bold h-40 md:h-32"></p>
+
       <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center">
         <div>
           <a class="btn text-white bg-purple-600 hover:bg-purple-700 w-full mb-4 sm:w-auto sm:mb-0" href="/docs/getting-started/installation/">Getting started</a>
